<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/insufficientFundsTitle"
        android:id="@+id/insufficientFundsTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/insufficientFundsMessage"
        android:id="@+id/insufficientFundsMessage"
        android:layout_below="@+id/insufficientFundsTitle"
        android:layout_alignStart="@+id/insufficientFundsTitle"
        android:layout_marginRight="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/insufficientFundsSecondMessage"
        android:id="@+id/insuffientFundsSecondMessage"
        android:layout_below="@+id/insufficientFundsMessage"
        android:layout_alignStart="@+id/insufficientFundsMessage"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/insufficientFundsButton"
        style="?android:borderlessButtonStyle"
        android:textColor="@color/myBlue"
        android:layout_below="@+id/insuffientFundsSecondMessage"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"/>
</RelativeLayout>