<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcomeTitle"
        android:id="@+id/welcomeTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Welcome to Restaurant"
        android:id="@+id/welcomeSubTitle"
        android:layout_below="@+id/welcomeTitle"
        android:layout_alignStart="@+id/welcomeTitle"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/welcomeBlurbText"
        android:id="@+id/welcomeBlurb"
        android:layout_below="@+id/welcomeSubTitle"
        android:layout_alignStart="@+id/welcomeSubTitle"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/welcomeWalkthrough"
        android:id="@+id/welcomeWalkthroughText"
        android:layout_below="@+id/welcomeBlurb"
        android:layout_alignStart="@+id/welcomeBlurb"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/welcomeOKButton"
        android:layout_below="@+id/welcomeWalkthroughText"
        android:layout_alignParentEnd="true"
        style="?android:borderlessButtonStyle"
        android:textColor="@color/myBlue"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walkthrough"
        android:id="@+id/welcomeWalkthroughButton"
        android:layout_below="@+id/welcomeWalkthroughText"
        android:layout_toStartOf="@+id/welcomeOKButton"
        style="?android:borderlessButtonStyle"
        android:textColor="@color/alternativeGreen"/>
</RelativeLayout>