<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/receipt_dialog_title"
        android:id="@+id/orderConfirmationTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderConfirmationReceiptButton"
        android:id="@+id/orderConfirmationReceiptButton"
        style="?android:borderlessButtonStyle"
        android:textColor="@color/alternativeGreen"
        android:layout_alignTop="@+id/orderConfirmationOKButton"
        android:layout_toStartOf="@+id/orderConfirmationOKButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/orderConfirmationTableErrorText"
        android:id="@+id/orderConfirmationTableErrorText"
        android:layout_below="@+id/orderConfirmationGrid"
        android:layout_alignStart="@+id/orderConfirmationSubTitle"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"/>

    <Button
        style="?android:borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/orderConfirmationOKButton"
        android:textColor="@color/myBlue"
        android:layout_below="@+id/orderConfirmationReceiptText"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/receipt_dialog_subtitle"
        android:id="@+id/orderConfirmationSubTitle"
        android:layout_marginLeft="2dp"
        android:layout_below="@+id/orderConfirmationTitle"
        android:layout_alignStart="@+id/orderConfirmationTitle"
        android:layout_marginBottom="25dp"/>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:alignmentMode="alignMargins"
        android:useDefaultMargins="true"
        android:id="@+id/orderConfirmationGrid"
        android:layout_below="@+id/orderConfirmationSubTitle"
        android:layout_toStartOf="@+id/orderConfirmationOKButton"
        android:layout_marginBottom="10dp"
        android:layout_alignEnd="@+id/orderConfirmationTableErrorText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/orderConfirmationTableNumberTitle"
            android:id="@+id/orderConfirmationTableTitle"
            android:layout_column="0"
            android:layout_row="0"
            android:minWidth="55dp"
            android:textColor="@color/myBlue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Table"
            android:id="@+id/orderConfirmationTableNumber"
            android:layout_column="1"
            android:layout_row="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Price"
            android:id="@+id/orderConfirmationPriceTitle"
            android:layout_below="@+id/paymentDialogTitle"
            android:layout_alignStart="@+id/paymentDialogTitle"
            android:layout_column="0"
            android:layout_row="1"
            android:minWidth="55dp"
            android:textColor="@color/myBlue"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Amount"
            android:id="@+id/orderConfirmationGBPAmount"
            android:layout_below="@+id/paymentDialogTitle"
            android:layout_toEndOf="@+id/orderConfirmationPriceTitle"
            android:layout_column="1"
            android:layout_row="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bitcoin"
            android:id="@+id/orderConfirmationBitcoinTitle"
            android:layout_column="0"
            android:layout_row="2"
            android:minWidth="55dp"
            android:textColor="@color/myBlue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Amount"
            android:id="@+id/orderConfirmationBitcoinAmount"
            android:layout_column="1"
            android:layout_row="2"/>
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/orderConfirmationReceiptText"
        android:id="@+id/orderConfirmationReceiptText"
        android:layout_below="@+id/orderConfirmationTableErrorText"
        android:layout_alignStart="@+id/orderConfirmationGrid"
        android:layout_alignEnd="@+id/orderConfirmationTableErrorText"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>